# docsub

./: .docsub.toml  CHANGELOG.md  Justfile  Makefile  README.md  Taskfile.yml  docsub.toml  pyproject.toml  tox.ini
NEWS.d/: 58.added.md  58.breaking.1.md  58.breaking.2.md  64.added.md  65.fixed.md  65.misc.1.md  65.misc.2.md  65.misc.md  67.misc.md  71.changed.md  84.breaking.md  85.added.md  85.breaking.md  85.misc.md
docs/badge/: v0.json
news.d/: 11.added.md  12.added.md  13.added.md  17.docs.md  17.misc.md  19.added.md  19.breaking.md  19.misc.md  22.misc.md  25.misc.md  29.docs.md  3.fixed.md  36.added.md  36.misc.md  36.removed.1.md  36.removed.md  37.misc.md  46.added.md  46.misc.md  5.fixed.md  50.added.md  50.breaking.md  54.fixed.md  58.breaking.md  6.changed.md  7.added.md  7.misc.md  9.misc.md
src/docsub/: __base__.py  __init__.py  __main__.py  cli.py  config.py  environment.py  errors.py  logging.py  process.py
src/docsub/commands/: __init__.py  exec.py  help.py  include.py  lines.py  strip.py  x.py
src/docsub/formats/: md.py
src/docsub/processors/: md.py
tests/: test_cmd_exec.py  test_readme.py  test_readme_docsubfile.py  test_readme_indent.py  test_readme_showcase.py  test_tmpdir.py
tests/test_readme/: README.md  RESULT.md
tests/test_readme_docsubfile/: docsubfile.py
