[project]
name = "docsub"
description = "Update documentation files from external content."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
  "loguru~=0.7",
  "pydantic-settings~=2.7",
  "rich-click~=1.8",
]

[dependency-groups]
dev = [
  "bump-my-version; python_version>='3.13'",
  "caseutil; python_version>='3.13'",
  "mypy; python_version>='3.13'",
  "pytest~=8.3; python_version>='3.13'",
  "pytest-cov~=6.0; python_version>='3.13'",
  "pytest-sugar~=1.0; python_version>='3.13'",
  "ruff; python_version>='3.13'",
  "towncrier; python_version>='3.13'",
]

[project.scripts]
docsub = "docsub.cli:cli"

[project.urls]
Repository = "https://github.com/makukha/docsub"
Issues = "https://github.com/makukha/docsub/issues"
Changelog = "https://github.com/makukha/docsub/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# bump-my-version

[tool.bumpversion]
current_version = "0.4.0"
allow_dirty = true
files = [
  {filename = "README.md"},
  {filename = "src/docsub/__init__.py"},
]

# hatch

[tool.hatch.version]
path = "src/docsub/__init__.py"

# ruff

[tool.ruff]
target-version = "py313"
[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "S"]
per-file-ignores."tests/**/*.py" = [
  "S101",  # Use of `assert` detected
  "S603",  # `subprocess` call: check for execution of untrusted input
]
[tool.ruff.format]
quote-style = "single"
docstring-code-format = true
docstring-code-line-length = "dynamic"

# towncrier

[tool.towncrier]
directory = "news.d"
filename = "CHANGELOG.md"
title_format = "## [v{version}](https://github.com/makukha/docsub/releases/tag/v{version}) — {project_date}"
issue_format = "[#{issue}](https://github.com/makukha/docsub/issues/{issue})"
type = [
  {name = "Security ⚠️", directory = "security", showcontent = true},
  {name = "Breaking 🔥", directory = "breaking", showcontent = true},
  {name = "Removed 💨", directory = "removed", showcontent = true},
  {name = "Deprecated ❄️", directory = "deprecated", showcontent = true},
  {name = "Added 🌿", directory = "added", showcontent = true},
  {name = "Changed", directory = "changed", showcontent = true},
  {name = "Fixed", directory = "fixed", showcontent = true},
  {name = "Docs", directory = "docs", showcontent = true},
  {name = "Misc", directory = "misc", showcontent = true},
]

# uv

[tool.uv]
package = true
